--- a/index.html
+++ b/index.html
@@ -1,1 +1,335 @@
-volta mais tarde
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="description" content="">
+  <meta name="author" content="">
+
+  <title>Jovani de Souza</title>
+
+  <!-- Bootstrap core CSS -->
+  <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed:500,700" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Muli:400,400i,800,800i" rel="stylesheet">
+  <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
+  <link href="css/resume.css" rel="stylesheet">
+  <link rel="shortcut icon" href="img/code.ico" type="image/x-icon">
+  
+</head>
+
+<body id="page-top">
+
+  <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
+
+    <!-- Mobile Button -->
+    <button class="navbar-toggler order-first" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <!-- Profile picture -->
+    <a class="navbar-brand js-scroll-trigger" href="#page-top">
+      <span class="d-none d-lg-block">
+        <img class="img-fluid img-profile rounded-square" src="img/profile.jpg" alt="">
+      </span>
+    </a>
+    <!-- Social Icons -->
+    <div class="subheading mb-3 social-icons">
+      <a href="https://www.linkedin.com/in/jovani-de-souza-94ba9b67/" target="_blank">
+        <i class="fab fa-linkedin"></i>
+      </a>
+      <a href="https://github.com/jovanidesouza" target="_blank">
+        <i class="fab fa-github"></i>
+      </a>
+      <a href="mailto:jovanidesouza@hotmail.com">
+        <i class="fas fa-envelope"></i>
+      </a>
+      <a href="skype:jovanidesouza?chat">
+        <i class="fab fa-skype"></i>
+      </a>     
+    </div>
+    <!-- primary left list -->
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link js-scroll-trigger" href="#about">About me</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link js-scroll-trigger" href="#experience">Experience</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link js-scroll-trigger" href="#education">Education</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link js-scroll-trigger" href="#skills">My Skills</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link js-scroll-trigger" href="#interests">Interests</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link js-scroll-trigger" href="#portifolio">Portfolio</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
+  <!-- Page content -->
+  <div class="container-fluid">
+    <!-- about me -->
+    <section class="resume-section p-lg-5 align-items-start" id="about">
+      <div class="container">
+        <div class="card border-0 shadow my-5">
+          <div class="card-body post-color">
+            <h1 class="mb-3">jovani de souza</h1>
+            <div class="subheading mb-5">Software Analyst - Software Developer</div>
+          </div>    
+        </div>
+      </div>
+    </section>
+    <!-- experience -->
+    <section class="resume-section p-lg-5 align-items-start" id="experience">
+      <div class="container">
+        <div class="card border-0 shadow my-5">
+          <div class="card-body post-color">
+            <h2 class="mb-3">Experience</h2>
+            <div class="resume-item  flex-column flex-md-row justify-content-between mb-5">
+                <div class="resume-content p-4">
+                  <h3 class="mb-0">Software Analyst</h3>
+                  <div class="text-primary mb-3"><i class="fas fa-map-marker-alt"></i> Chapecó - SC - Brazil </div>
+                  <div>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua".</div>
+                </div>
+            </div>
+            <div class="resume-item  flex-column flex-md-row justify-content-between mb-5">
+              <div class="resume-content p-4">
+                <h3 class="mb-0">it intern</h3>
+                <div class="text-primary mb-3"><i class="fas fa-map-marker-alt"></i> Chapecó - SC - Brazil </div>
+                <div>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua".</div>
+              </div>
+          </div>
+          </div>    
+        </div>
+      </div>
+    </section>
+    <!-- education -->
+    <section class="resume-section p-lg-5 align-items-start" id="education">
+        <div class="container">
+          <div class="card border-0 shadow my-5">
+            <div class="card-body post-color">
+              <h2 class="mb-3">Education</h2>
+              <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-3">
+                <div class="resume-content p-4">
+                  <h3 class="mb-0">Bachelor of Computer Science</h3>
+                  <div class="subheading mb-2">Federal University of Fronteira Sul - UFFS</div>
+                </div>
+              </div>
+              <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-3">
+                <div class="resume-content p-4">
+                  <h3 class="mb-0">Computer Technician</h3>
+                  <div class="subheading mb-2"></div>
+                </div>
+              </div>
+              <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-3">
+                <div class="resume-content p-4">
+                  <h3 class="mb-0">web designer</h3>
+                  <div class="subheading mb-2"></div>
+                </div>
+              </div>
+            </div>    
+          </div>
+        </div>
+      </section>
+    <!-- my skills -->
+    <section class="resume-section p-lg-5 d-flex align-items-start" id="skills">
+      <!-- fundo branco -->
+      <div class = "container">
+        <div class = "card my-5 shadow border-0">
+          <div class = "card-body post-color" >
+            <h2 class="mb-5">My Skills</h2>
+            <!---->
+            <div class="row mx-md-5">
+              <div class="col-md-6">
+                <div class="rounded shadow mb-5 position-relative bg-white py-5 px-4 card-border">
+                  <div class="skill-header rounded-circle position-absolute">
+                    <img class="skill-icon" src="/img/coding.png">
+                  </div>
+                  <div class="text-center">
+                    <h4 class="mt-4 text-center">languages & frameworks</h4>
+                    <ul class="navbar-nav text-left mx-2 px-4 py-4">
+                      <li>
+                        <i class="fas fa-check"></i><i class="text-left"> C/C++</i>
+                      </li>
+                      <li>
+                        <i class="fas fa-check"></i><i class="text-center"> Python</i>
+                      </li>
+                      <li>
+                        <i class="fas fa-check"></i><i class="text-center"> Java</i>
+                      </li>
+                      <li>
+                        <i class="fas fa-check"></i><i class="text-center"> JavaScript</i>
+                      </li>
+                      <li>
+                        <i class="fas fa-check"></i><i class="text-center"> HTML/CSS</i>
+                      </li>
+                      <li>
+                        <i class="fas fa-check"></i><i class="text-center"> Bootstrap</i>
+                      </li>
+                      <li>
+                        <i class="fas fa-check"></i><i class="text-center"> Node.js</i>
+                      </li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-6">
+                <div class="rounded shadow mb-5 position-relative bg-white py-5 px-4 card-border">
+                  <div class="skill-header rounded-circle position-absolute">
+                    <img class="skill-icon" src="/img/tools.png">
+                  </div>
+                  <div class="text-center">
+                    <h4 class="mt-4 text-center">development tools</h4>
+                    <ul class="navbar-nav text-left mx-2 px-4 py-4">
+                      <li>
+                        <i class="fas fa-check"></i><i class="text-center"> SQL</i>
+                      </li>
+                      <li>
+                        <i class="fas fa-check"></i><i class="text-center"> MongoDB</i>
+                      </li>
+                      <li>
+                        <i class="fas fa-check"></i><i class="text-center"> Redis</i>
+                      </li>
+                      <li>
+                        <i class="fas fa-check"></i><i class="text-center"> Git</i>
+                      </li>
+                      <li>
+                        <i class="fas fa-check"></i><i class="text-center"> Docker</i>
+                      </li>
+                      <li>
+                        <i class="fas fa-check"></i><i class="text-center"> Unity Tests</i>
+                      </li>
+                      <li>
+                        <i class="fas fa-check"></i><i class="text-center"> Scrum</i>
+                      </li>
+                    </ul>
+                  </div>
+                </div>
+              </div>			
+            </div>  
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- interests -->
+    <section class="resume-section p-lg-5 align-items-start" id="interests">
+      <div class="container">
+        <div class="card border-0 shadow my-5">
+          <div class="card-body post-color">
+            <h2 class="mb-3">Interests</h2>
+            <div style="height: 500px"></div>
+          </div>    
+        </div>
+      </div>
+    </section>
+    <!-- portifolio -->
+    <section class="resume-section p-3 p-lg-5 d-flex justify-content-start" id="portifolio">
+      <div class="container">
+        <div class="card border-0 shadow">
+          <div class="card-body post-color">
+            <h1 class="my-4">Portfolio</h1>
+            <div class="row">
+              <div class="col-lg-4 mb-4">
+                <div class="card h-100 shadow border-0">
+                  <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
+                  <div class="card-body card-color">
+                    <h4 class="card-title text-center">
+                        <a href="#">Project One</a>
+                    </h4>
+                    <div class="text-center">
+                      <i class="dev-icons fab fa-java"></i>
+                      <i class="dev-icons fab fa-python"></i>
+                      <i class=" dev-icons fab fa-js"></i>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="col-lg-4 mb-4">
+                <div class="card h-100 shadow border-0">
+                  <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
+                  <div class="card-body card-color">
+                    <h4 class="card-title text-center">
+                      <a href="#">Project Two</a>
+                    </h4>
+                    <p class="card-text text-center">Lorem ipsum dolor sit amet. </p>
+                  </div>
+                </div>
+              </div>
+              <div class="col-lg-4 mb-4">
+                <div class="card h-100 shadow border-0">
+                  <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
+                  <div class="card-body card-color">
+                    <h4 class="card-title text-center">
+                      <a href="#">Project Three</a>
+                    </h4>
+                    <p class="card-text text-center">Lorem ipsum dolor sit amet.</p>
+                  </div>
+                </div>
+              </div>
+              <div class="col-lg-4 mb-4">
+                <div class="card h-100 shadow border-0">
+                  <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
+                  <div class="card-body card-color">
+                    <h4 class="card-title text-center">
+                      <a href="#">Project Four</a>
+                    </h4>
+                    <p class="card-text text-center">Lorem ipsum dolor sit amet.</p>
+                  </div>
+                </div>
+              </div>
+              <div class="col-lg-4 mb-4">
+                <div class="card h-100 shadow border-0">
+                  <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
+                  <div class="card-body card-color">
+                    <h4 class="card-title text-center">
+                      <a href="#">Project Five</a>
+                    </h4>
+                    <p class="card-text text-center">Lorem ipsum dolor sit amet.</p>
+                  </div>
+                </div>
+              </div>
+              <div class="col-lg-4 mb-4">
+                <div class="card h-100 shadow border-0">
+                  <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
+                  <div class="card-body card-color">
+                    <h4 class="card-title text-center">
+                      <a href="#">Project Six</a>
+                    </h4>
+                    <p class="card-text text-center">Lorem ipsum dolor sit amet.</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>    
+        </div>
+      </div>
+    </section>
+  </dvi>
+
+  <!-- Bootstrap core JavaScript -->
+  <script src="vendor/jquery/jquery.min.js"></script>
+  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+
+  <!-- Plugin JavaScript -->
+  <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
+
+  <!-- Custom scripts for this template -->
+  <script src="js/resume.min.js"></script>
+
+</body>
+
+<footer>
+  <div class="container social-icons text-center">
+    
+  </div>
+</footer>
+
+</html>
