Feat: Fix sidebar

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <!-- Profile picture -->
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
       <span class="d-none d-lg-block">
-        <img class="img-fluid img-profile rounded-square" src="img/profile.jpg" alt="">
+        <img class="img-fluid img-profile rounded-circle" src="img/profile.jpg" alt="">
       </span>
     </a>
     <!-- Social Icons -->
@@ -48,7 +48,10 @@
       </a>
       <a href="skype:jovanidesouza?chat">
         <i class="fab fa-skype"></i>
-      </a>     
+      </a>
+      <a href="#">
+        <i class="fab fa-discord"></i>
+      </a>      
     </div>
     <!-- primary left list -->
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
