Feat: Update sidebar

--- a/index.html
+++ b/index.html
@@ -37,30 +37,27 @@
     </a>
     <!-- Social Icons -->
     <div class="subheading mb-3 social-icons">
-      <a href="https://www.linkedin.com/in/jovani-de-souza-94ba9b67/" target="_blank">
-        <i class="fab fa-linkedin"></i>
-      </a>
       <a href="https://github.com/jovanidesouza" target="_blank">
         <i class="fab fa-github"></i>
       </a>
-      <a href="mailto:jovanidesouza@hotmail.com">
-        <i class="fas fa-envelope"></i>
+      <a href="https://www.linkedin.com/in/jovani-de-souza-94ba9b67/" target="_blank">
+        <i class="fab fa-linkedin"></i>
       </a>
       <a href="skype:jovanidesouza?chat">
         <i class="fab fa-skype"></i>
       </a>
-      <a href="#">
+      <a href="https://discord.io/user/Dijos#5994">
         <i class="fab fa-discord"></i>
-      </a>      
+      </a> 
+      <a href="mailto:jovanidesouza@hotmail.com">
+        <i class="fab fa-telegram-plane"></i>
+      </a>     
     </div>
     <!-- primary left list -->
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav">
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#about">About me</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#experience">Experience</a>
         </li>
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#education">Education</a>
@@ -84,32 +81,8 @@
       <div class="container">
         <div class="card border-0 shadow my-5">
           <div class="card-body post-color">
-            <h1 class="mb-3">jovani de souza</h1>
-            <div class="subheading mb-5">Software Analyst - Software Developer</div>
-          </div>    
-        </div>
-      </div>
-    </section>
-    <!-- experience -->
-    <section class="resume-section p-lg-5 align-items-start" id="experience">
-      <div class="container">
-        <div class="card border-0 shadow my-5">
-          <div class="card-body post-color">
-            <h2 class="mb-3">Experience</h2>
-            <div class="resume-item  flex-column flex-md-row justify-content-between mb-5">
-                <div class="resume-content p-4">
-                  <h3 class="mb-0">Software Analyst</h3>
-                  <div class="text-primary mb-3"><i class="fas fa-map-marker-alt"></i> Chapecó - SC - Brazil </div>
-                  <div>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua".</div>
-                </div>
-            </div>
-            <div class="resume-item  flex-column flex-md-row justify-content-between mb-5">
-              <div class="resume-content p-4">
-                <h3 class="mb-0">it intern</h3>
-                <div class="text-primary mb-3"><i class="fas fa-map-marker-alt"></i> Chapecó - SC - Brazil </div>
-                <div>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua".</div>
-              </div>
-          </div>
+            <h1 class="mb-2">jovani de souza</h1>
+            <div class="subheading mb-5">Bachelor of Computer Science</div>
           </div>    
         </div>
       </div>
@@ -157,7 +130,7 @@
                     <img class="skill-icon" src="/img/coding.png">
                   </div>
                   <div class="text-center">
-                    <h4 class="mt-4 text-center">languages & frameworks</h4>
+                    <h4 class="mt-4 text-center">development</h4>
                     <ul class="navbar-nav text-left mx-2 px-4 py-4">
                       <li>
                         <i class="fas fa-check"></i><i class="text-left"> C/C++</i>
@@ -190,7 +163,7 @@
                     <img class="skill-icon" src="/img/tools.png">
                   </div>
                   <div class="text-center">
-                    <h4 class="mt-4 text-center">development tools</h4>
+                    <h4 class="mt-4 text-center">other tools</h4>
                     <ul class="navbar-nav text-left mx-2 px-4 py-4">
                       <li>
                         <i class="fas fa-check"></i><i class="text-center"> SQL</i>
