--- a/index.html
+++ b/index.html
@@ -60,9 +60,6 @@
           <a class="nav-link js-scroll-trigger" href="#about">About me</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#skills">My Skills</a>
-        </li>
-        <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#interests">Interests</a>
         </li>
         <li class="nav-item">
@@ -84,13 +81,13 @@
         </div>
       </div>
     </section>
-    <!-- my skills -->
-    <section class="resume-section p-lg-5 d-flex align-items-start" id="skills">
+    <!-- interests -->
+    <section class="resume-section p-lg-5 d-flex align-items-start" id="interests">
       <!-- fundo branco -->
       <div class = "container">
         <div class = "card my-5 shadow border-0">
           <div class = "card-body post-color" >
-            <h2 class="mb-5">My Skills</h2>
+            <h2 class="mb-5">Interests</h2>
             <!---->
             <div class="row mx-md-5">
               <div class="col-md-6">
@@ -99,28 +96,28 @@
                     <img class="skill-icon" src="/img/coding.png">
                   </div>
                   <div class="text-center">
-                    <h4 class="mt-4 text-center">development</h4>
-                    <ul class="navbar-nav text-left mx-2 px-4 py-4">
+                    <h4 class="mt-4 text-center">Software development</h4>
+                    <ul class="navbar-nav text-center mx-2 px-4 py-2">
                       <li>
-                        <i class="fas fa-check"></i><i class="text-left"> C/C++</i>
+                        <i class="fas fa-check"></i><i class="text-left"> lorem ipsum dolor</i>
                       </li>
                       <li>
-                        <i class="fas fa-check"></i><i class="text-center"> Python</i>
+                        <i class="fas fa-check"></i><i class="text-center"> lorem ipsum dolor</i>
                       </li>
                       <li>
-                        <i class="fas fa-check"></i><i class="text-center"> Java</i>
+                        <i class="fas fa-check"></i><i class="text-center"> lorem ipsum dolor</i>
+                      </li>
+                    </ul>
+                    <h4 class="mt-4 text-center">Quality Assurance</h4>
+                    <ul class="navbar-nav text-center mx-2 px-4 py-2">
+                      <li>
+                        <i class="fas fa-check"></i><i class="text-left"> lorem ipsum dolor</i>
                       </li>
                       <li>
-                        <i class="fas fa-check"></i><i class="text-center"> JavaScript</i>
+                        <i class="fas fa-check"></i><i class="text-center"> lorem ipsum dolor</i>
                       </li>
                       <li>
-                        <i class="fas fa-check"></i><i class="text-center"> HTML/CSS</i>
-                      </li>
-                      <li>
-                        <i class="fas fa-check"></i><i class="text-center"> Bootstrap</i>
-                      </li>
-                      <li>
-                        <i class="fas fa-check"></i><i class="text-center"> Node.js</i>
+                        <i class="fas fa-check"></i><i class="text-center"> lorem ipsum dolor</i>
                       </li>
                     </ul>
                   </div>
@@ -132,28 +129,28 @@
                     <img class="skill-icon" src="/img/tools.png">
                   </div>
                   <div class="text-center">
-                    <h4 class="mt-4 text-center">other tools</h4>
-                    <ul class="navbar-nav text-left mx-2 px-4 py-4">
+                    <h4 class="mt-4 text-center">Data Science</h4>
+                    <ul class="navbar-nav text-center mx-2 px-4 py-2">
                       <li>
-                        <i class="fas fa-check"></i><i class="text-center"> SQL</i>
+                        <i class="fas fa-check"></i><i class="text-center"> lorem ipsum dolor</i>
                       </li>
                       <li>
-                        <i class="fas fa-check"></i><i class="text-center"> MongoDB</i>
+                        <i class="fas fa-check"></i><i class="text-center"> lorem ipsum dolor</i>
                       </li>
                       <li>
-                        <i class="fas fa-check"></i><i class="text-center"> Redis</i>
+                        <i class="fas fa-check"></i><i class="text-center"> lorem ipsum dolor</i>
+                      </li>
+                    </ul>
+                    <h4 class="mt-4 text-center">Internet of Things</h4>
+                    <ul class="navbar-nav text-center mx-2 px-4 py-2">
+                      <li>
+                        <i class="fas fa-check"></i><i class="text-left"> lorem ipsum dolor</i>
                       </li>
                       <li>
-                        <i class="fas fa-check"></i><i class="text-center"> Git</i>
+                        <i class="fas fa-check"></i><i class="text-center"> lorem ipsum dolor</i>
                       </li>
                       <li>
-                        <i class="fas fa-check"></i><i class="text-center"> Docker</i>
-                      </li>
-                      <li>
-                        <i class="fas fa-check"></i><i class="text-center"> Unity Tests</i>
-                      </li>
-                      <li>
-                        <i class="fas fa-check"></i><i class="text-center"> Scrum</i>
+                        <i class="fas fa-check"></i><i class="text-center"> lorem ipsum dolor</i>
                       </li>
                     </ul>
                   </div>
@@ -161,17 +158,6 @@
               </div>			
             </div>  
           </div>
-        </div>
-      </div>
-    </section>
-    <!-- interests -->
-    <section class="resume-section p-lg-5 align-items-start" id="interests">
-      <div class="container">
-        <div class="card border-0 shadow my-5">
-          <div class="card-body post-color">
-            <h2 class="mb-3">Interests</h2>
-            <div style="height: 500px"></div>
-          </div>    
         </div>
       </div>
     </section>
