Feat: update interests section

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                   </div>
                   <div class="text-center">
                     <h4 class="mt-4 text-center">Software development</h4>
-                    <ul class="navbar-nav text-center mx-2 px-4 py-2">
+                    <ul class="navbar-nav text-center mx-2 px-2 py-2">
                       <li>
                         <i class="fas fa-check"></i><i class="text-left"> lorem ipsum dolor</i>
                       </li>
@@ -108,8 +108,17 @@
                         <i class="fas fa-check"></i><i class="text-center"> lorem ipsum dolor</i>
                       </li>
                     </ul>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-6">
+                <div class="rounded shadow mb-5 position-relative bg-white py-5 px-4 card-border">
+                  <div class="skill-header rounded-circle position-absolute">
+                    <img class="skill-icon" src="/img/coding.png">
+                  </div>
+                  <div class="text-center">
                     <h4 class="mt-4 text-center">Quality Assurance</h4>
-                    <ul class="navbar-nav text-center mx-2 px-4 py-2">
+                    <ul class="navbar-nav text-center mx-2 px-2 py-2">
                       <li>
                         <i class="fas fa-check"></i><i class="text-left"> lorem ipsum dolor</i>
                       </li>
@@ -130,7 +139,7 @@
                   </div>
                   <div class="text-center">
                     <h4 class="mt-4 text-center">Data Science</h4>
-                    <ul class="navbar-nav text-center mx-2 px-4 py-2">
+                    <ul class="navbar-nav text-center mx-2 px-2 py-2">
                       <li>
                         <i class="fas fa-check"></i><i class="text-center"> lorem ipsum dolor</i>
                       </li>
@@ -141,8 +150,17 @@
                         <i class="fas fa-check"></i><i class="text-center"> lorem ipsum dolor</i>
                       </li>
                     </ul>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-6">
+                <div class="rounded shadow mb-5 position-relative bg-white py-5 px-4 card-border">
+                  <div class="skill-header rounded-circle position-absolute">
+                    <img class="skill-icon" src="/img/tools.png">
+                  </div>
+                  <div class="text-center">
                     <h4 class="mt-4 text-center">Internet of Things</h4>
-                    <ul class="navbar-nav text-center mx-2 px-4 py-2">
+                    <ul class="navbar-nav text-center mx-2 px-2 py-2">
                       <li>
                         <i class="fas fa-check"></i><i class="text-left"> lorem ipsum dolor</i>
                       </li>
