Feat: ajust portfolio label

--- a/index.html
+++ b/index.html
@@ -193,11 +193,7 @@
                     <h4 class="card-title text-center">
                         <a href="#">Project One</a>
                     </h4>
-                    <div class="text-center">
-                      <i class="dev-icons fab fa-java"></i>
-                      <i class="dev-icons fab fa-python"></i>
-                      <i class=" dev-icons fab fa-js"></i>
-                    </div>
+                    <p class="card-text text-center">Lorem ipsum dolor sit amet. </p>
                   </div>
                 </div>
               </div>
