--- a/index.html
+++ b/index.html
@@ -43,21 +43,21 @@
       <a href="https://www.linkedin.com/in/jovani-de-souza-94ba9b67/" target="_blank">
         <i class="fab fa-linkedin"></i>
       </a>
-      <a href="skype:jovanidesouza?chat">
-        <i class="fab fa-skype"></i>
+      <a href="mailto:jovanidesouza@hotmail.com">
+        <i class="fas fa-envelope"></i>
       </a>
       <a href="https://discord.io/user/Dijos#5994">
         <i class="fab fa-discord"></i>
       </a> 
-      <a href="mailto:jovanidesouza@hotmail.com">
-        <i class="fab fa-telegram-plane"></i>
+      <a href="skype:jovanidesouza?chat">
+        <i class="fab fa-skype"></i>
       </a>     
     </div>
     <!-- primary left list -->
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#about">About me</a>
+          <a class="nav-link js-scroll-trigger" href="#about">About</a>
         </li>
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#interests">Interests</a>
@@ -75,8 +75,8 @@
       <div class="container">
         <div class="card border-0 shadow my-5">
           <div class="card-body post-color">
-            <h1 class="mb-2">jovani de souza</h1>
-            <div class="subheading mb-5">Bachelor of Computer Science</div>
+            <h1 class="mb-2">Jovani de Souza</h1>
+            <div class="subheading mb-5">Bachelor of Computer Science | Quality Assurance Analyst | Technology Enthusiast</div>
           </div>    
         </div>
       </div>
