--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <!-- Profile picture -->
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
       <span class="d-none d-lg-block">
-        <img class="img-fluid img-profile rounded-circle" src="img/profile.jpg" alt="">
+        <img class="img-fluid img-profile rounded-square" src="img/profile.jpg" alt="">
       </span>
     </a>
     <!-- Social Icons -->
