--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
               <div class="col-md-6">
                 <div class="rounded shadow mb-5 position-relative bg-white py-5 px-4 card-border">
                   <div class="skill-header rounded-circle position-absolute">
-                    <img class="skill-icon" src="/img/coding.png">
+                    <img class="skill-icon" src="/img/tools.png">
                   </div>
                   <div class="text-center">
                     <h4 class="mt-4 text-center">Quality Assurance</h4>
@@ -135,7 +135,7 @@
               <div class="col-md-6">
                 <div class="rounded shadow mb-5 position-relative bg-white py-5 px-4 card-border">
                   <div class="skill-header rounded-circle position-absolute">
-                    <img class="skill-icon" src="/img/tools.png">
+                    <img class="skill-icon" src="/img/data.png">
                   </div>
                   <div class="text-center">
                     <h4 class="mt-4 text-center">Data Science</h4>
@@ -156,7 +156,7 @@
               <div class="col-md-6">
                 <div class="rounded shadow mb-5 position-relative bg-white py-5 px-4 card-border">
                   <div class="skill-header rounded-circle position-absolute">
-                    <img class="skill-icon" src="/img/tools.png">
+                    <img class="skill-icon" src="/img/internet.png">
                   </div>
                   <div class="text-center">
                     <h4 class="mt-4 text-center">Internet of Things</h4>
