style: update profile in mobile

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <!-- Profile picture -->
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
       <span class="d-none d-lg-block">
-        <img class="img-fluid img-profile rounded-square" src="img/profile.jpg" alt="">
+        <img class="img-fluid img-profile rounded-circle" src="img/profile.jpg" alt="">
       </span>
     </a>
     <!-- Social Icons -->
@@ -74,6 +74,9 @@
     <section class="resume-section p-lg-5 align-items-start" id="about">
       <div class="container">
         <div class="card border-0 shadow my-5">
+          <div class="profile-header  position-absolute" >
+            <img class="profile-icon rounded-circle border-profile" src="/img/profile.jpg">
+          </div>
           <div class="card-body post-color">
             <h1 class="mb-2">Jovani de Souza</h1>
             <div class="subheading mb-5">Bachelor of Computer Science | Quality Assurance Analyst | Technology Enthusiast</div>
