--- a/index.html
+++ b/index.html
@@ -77,9 +77,19 @@
           <div class="profile-header  position-absolute" >
             <img class="profile-icon rounded-circle border-profile" src="/img/profile.jpg">
           </div>
-          <div class="card-body post-color">
+          <div class="card-body post-color rounded">
             <h1 class="mb-2">Jovani de Souza</h1>
-            <div class="subheading mb-5">Bachelor of Computer Science | Quality Assurance Analyst | Technology Enthusiast</div>
+            <ul class="navbar-nav">
+              <li>
+                <i class="fas fa-graduation-cap"></i><i class="text-left"> Bachelor of Computer Science</i>
+              </li>
+              <li>
+                <i class="fas fa-code"></i><i class="text-left"> Quality Assurance Analyst</i>
+              </li>
+              <li>
+                <i class="fas fa-laptop"></i><i class="text-left"> Technology Enthusiast</i>
+              </li>
+            </ul>
           </div>    
         </div>
       </div>
@@ -89,7 +99,7 @@
       <!-- fundo branco -->
       <div class = "container">
         <div class = "card my-5 shadow border-0">
-          <div class = "card-body post-color" >
+          <div class = "card-body post-color rounded" >
             <h2 class="mb-5">Interests</h2>
             <!---->
             <div class="row mx-md-5">
@@ -186,7 +196,7 @@
     <section class="resume-section p-3 p-lg-5 d-flex justify-content-start" id="portifolio">
       <div class="container">
         <div class="card border-0 shadow">
-          <div class="card-body post-color">
+          <div class="card-body post-color rounded">
             <h2 class="my-4">Portfolio</h2>
             <div class="row">
               <div class="col-lg-4 mb-4">
