style: ajust subheading

--- a/index.html
+++ b/index.html
@@ -81,13 +81,13 @@
             <h1 class="mb-2">Jovani de Souza</h1>
             <ul class="navbar-nav">
               <li>
-                <i class="fas fa-graduation-cap"></i><i class="text-left"> Bachelor of Computer Science</i>
+                <i class="fas fa-graduation-cap"></i><i class="subheading"> Bachelor of Computer Science</i>
               </li>
               <li>
-                <i class="fas fa-code"></i><i class="text-left"> Quality Assurance Analyst</i>
+                <i class="fas fa-code"></i><i class="subheading"> Quality Assurance Analyst</i>
               </li>
               <li>
-                <i class="fas fa-laptop"></i><i class="text-left"> Technology Enthusiast</i>
+                <i class="fas fa-laptop"></i><i class="subheading"> Technology Enthusiast</i>
               </li>
             </ul>
           </div>    
