feat: update interrests section

--- a/index.html
+++ b/index.html
@@ -130,16 +130,16 @@
                     <img class="skill-icon" src="/img/tools.png">
                   </div>
                   <div class="text-center">
-                    <h4 class="mt-4 text-center">Quality Assurance</h4>
+                    <h4 class="mt-4 text-center">Project Management</h4>
                     <ul class="navbar-nav text-center mx-2 px-2 py-2">
                       <li>
-                        <i class="fas fa-check"></i><i class="text-left"> lorem ipsum dolor</i>
+                        <i class="fas fa-check"></i><i class="text-left"> Quality Assurance</i>
                       </li>
                       <li>
-                        <i class="fas fa-check"></i><i class="text-center"> lorem ipsum dolor</i>
+                        <i class="fas fa-check"></i><i class="text-left"> Software Life Cycle</i>
                       </li>
                       <li>
-                        <i class="fas fa-check"></i><i class="text-center"> lorem ipsum dolor</i>
+                        <i class="fas fa-check"></i><i class="text-left"> Software Design</i>
                       </li>
                     </ul>
                   </div>
