style: ajust interrests section

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <link href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed:500,700" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Muli:400,400i,800,800i" rel="stylesheet">
   <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/konpa/devicon@master/devicon.min.css">
   <link href="css/resume.css" rel="stylesheet">
   <link rel="shortcut icon" href="img/code.ico" type="image/x-icon">
   
@@ -133,13 +133,13 @@
                     <h4 class="mt-4 text-center">Project Management</h4>
                     <ul class="navbar-nav text-center mx-2 px-2 py-2">
                       <li>
-                        <i class="fas fa-check"></i><i class="text-left"> Quality Assurance</i>
-                      </li>
-                      <li>
-                        <i class="fas fa-check"></i><i class="text-left"> Software Life Cycle</i>
-                      </li>
-                      <li>
                         <i class="fas fa-check"></i><i class="text-left"> Software Design</i>
+                      </li>
+                      <li>
+                        <i class="fas fa-check"></i><i class="text-left"> Development Life Cycle</i>
+                      </li>
+                      <li>
+                        <i class="fas fa-check"></i><i class="text-left"> Quality Assurance</i>
                       </li>
                     </ul>
                   </div>
