feat: update interrests section

--- a/index.html
+++ b/index.html
@@ -112,13 +112,13 @@
                     <h4 class="mt-4 text-center">Software development</h4>
                     <ul class="navbar-nav text-center mx-2 px-2 py-2">
                       <li>
-                        <i class="fas fa-desktop"></i><i class="text-left"> lorem ipsum dolor</i>
+                        <i class="fas fa-desktop"></i><i class="text-left"> C/C++, Python, JavaScript</i>
                       </li>
                       <li>
-                        <i class="far fa-window-maximize"></i><i class="text-center"> lorem ipsum dolor</i>
+                        <i class="far fa-window-maximize"></i><i class="text-center"> React, Bootstrap, HTML/CSS</i>
                       </li>
                       <li>
-                        <i class="fas fa-mobile-alt"></i><i class="text-center"> lorem ipsum dolor</i>
+                        <i class="fas fa-mobile-alt"></i><i class="text-center"> React Native, Dart/Flutter</i>
                       </li>
                     </ul>
                   </div>
