--- a/index.html
+++ b/index.html
@@ -112,10 +112,10 @@
                     <h4 class="mt-4 text-center">Software development</h4>
                     <ul class="navbar-nav text-center mx-2 px-2 py-2">
                       <li>
-                        <i class="fas fa-desktop"></i><i class="text-left"> Python, C/C++, Java, Go</i>
+                        <i class="fas fa-desktop"></i><i class="text-left"> Python, C/C++, JavaScript</i>
                       </li>
                       <li>
-                        <i class="far fa-window-maximize"></i><i class="text-center"> JavaScript, HTML/CSS, React</i>
+                        <i class="far fa-window-maximize"></i><i class="text-center"> Node.js, HTML/CSS, React</i>
                       </li>
                       <li>
                         <i class="fas fa-mobile-alt"></i><i class="text-center"> React Native, Dart/Flutter</i>
@@ -136,10 +136,10 @@
                         <i class="fas fa-check"></i><i class="text-left"> Software Design</i>
                       </li>
                       <li>
-                        <i class="fas fa-check"></i><i class="text-left"> Development Life Cycle</i>
+                        <i class="fas fa-check"></i><i class="text-left"> Quality Assurance</i>
                       </li>
                       <li>
-                        <i class="fas fa-check"></i><i class="text-left"> Quality Assurance</i>
+                        <i class="fas fa-check"></i><i class="text-left"> Development Life Cycle</i>
                       </li>
                     </ul>
                   </div>
@@ -154,13 +154,13 @@
                     <h4 class="mt-4 text-center">Data Science</h4>
                     <ul class="navbar-nav text-center mx-2 px-2 py-2">
                       <li>
-                        <i class="fas fa-check"></i><i class="text-center"> lorem ipsum dolor</i>
+                        <i class="fas fa-check"></i><i class="text-center"> Data Analytics</i>
                       </li>
                       <li>
-                        <i class="fas fa-check"></i><i class="text-center"> lorem ipsum dolor</i>
+                        <i class="fas fa-check"></i><i class="text-center"> Machine Learning</i>
                       </li>
                       <li>
-                        <i class="fas fa-check"></i><i class="text-center"> lorem ipsum dolor</i>
+                        <i class="fas fa-check"></i><i class="text-center"> Business Intelligence</i>
                       </li>
                     </ul>
                   </div>
