--- a/index.html
+++ b/index.html
@@ -112,13 +112,13 @@
                     <h4 class="mt-4 text-center">Software development</h4>
                     <ul class="navbar-nav text-center mx-2 px-2 py-2">
                       <li>
-                        <i class="fas fa-desktop"></i><i class="text-left"> Python, C/C++, JavaScript</i>
+                        <i class="fas fa-check"></i><i class="text-left"> Python, C/C++, Java, Go</i>
                       </li>
                       <li>
-                        <i class="far fa-window-maximize"></i><i class="text-center"> Node.js, HTML/CSS, React</i>
+                        <i class="fas fa-check"></i><i class="text-center"> JavaScript, HTML/CSS, Bootstrap</i>
                       </li>
                       <li>
-                        <i class="fas fa-mobile-alt"></i><i class="text-center"> React Native, Dart/Flutter</i>
+                        <i class="fas fa-check"></i><i class="text-center"> Node.js, React, React Native</i>
                       </li>
                     </ul>
                   </div>
