feat: update iot section

--- a/index.html
+++ b/index.html
@@ -175,13 +175,13 @@
                     <h4 class="mt-4 text-center">Internet of Things</h4>
                     <ul class="navbar-nav text-center mx-2 px-2 py-2">
                       <li>
-                        <i class="fas fa-check"></i><i class="text-left"> lorem ipsum dolor</i>
+                        <i class="fas fa-check"></i><i class="text-center"> Automation</i>
                       </li>
                       <li>
-                        <i class="fas fa-check"></i><i class="text-center"> lorem ipsum dolor</i>
+                        <i class="fas fa-check"></i><i class="text-left"> Smart Devices</i>
                       </li>
                       <li>
-                        <i class="fas fa-check"></i><i class="text-center"> lorem ipsum dolor</i>
+                        <i class="fas fa-check"></i><i class="text-center"> Hardware Prototype</i>
                       </li>
                     </ul>
                   </div>
