style: modify bio section

--- a/index.html
+++ b/index.html
@@ -77,19 +77,23 @@
           <div class="profile-header  position-absolute" >
             <img class="profile-icon rounded-circle border-profile" src="/img/profile.jpg">
           </div>
-          <div class="card-body post-color rounded">
+          <div class="card-body post-color rounded px-5">
             <h1 class="mb-2">Jovani de Souza</h1>
-            <ul class="navbar-nav">
-              <li>
-                <i class="fas fa-graduation-cap"></i><i class="text-left"> Bachelor of Computer Science</i>
-              </li>
-              <li>
-                <i class="fas fa-code"></i><i class="text-left"> Quality Assurance Analyst</i>
-              </li>
-              <li>
-                <i class="fas fa-laptop"></i><i class="text-left"> Technology Enthusiast</i>
-              </li>
-            </ul>
+            <div class="rounded shadow mb-5 bg-white py-5 px-4">
+              <div class="text-left">
+                <ul class="navbar-nav">
+                  <li>
+                    <i class="fas fa-graduation-cap"></i><i class="text-left"> Bachelor of Computer Science</i>
+                  </li>
+                  <li>
+                    <i class="fas fa-code"></i><i class="text-left"> Quality Assurance Analyst</i>
+                  </li>
+                  <li>
+                    <i class="fas fa-laptop"></i><i class="text-left"> Technology Enthusiast</i>
+                  </li>
+                </ul>
+              </div>
+            </div>
           </div>    
         </div>
       </div>
