--- a/index.html
+++ b/index.html
@@ -49,13 +49,13 @@
       <a href="mailto:jovanidesouza@hotmail.com">
         <i class="fas fa-envelope"></i>
       </a>
-      <a href="https://discord.io/user/Dijos#5994">
-        <i class="fab fa-discord"></i>
+      <a href="https://twitter.com/jovanidesouza">
+        <i class="fab fa-twitter"></i>
       </a>
-      <a href="skype:jovanidesouza?chat">
-        <i class="fab fa-instagram"></i>
+      <a href="https://medium.com/@jovanidesouza">
+        <i class="fab fa-medium"></i>
       </a>  
-      <a href="skype:jovanidesouza?chat">
+      <a href="https://t.me/jovanidesouza">
         <i class="fab fa-telegram-plane"></i>
       </a>     
     </div>
