--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <!-- Profile picture -->
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
       <span class="d-none d-lg-block">
-        <img class="img-fluid img-profile rounded-circle" src="img/profile.jpg" alt="">
+        <img class="img-fluid img-profile rounded-circle" src="img/profile.png" alt="">
       </span>
     </a>
     <div class="name">
@@ -81,7 +81,7 @@
       <div class="container">
         <div class="card border-0 shadow my-5">
           <div class="profile-header  position-absolute" >
-            <img class="profile-icon rounded-circle border-profile" src="/img/profile.jpg">
+            <img class="profile-icon rounded-circle border-profile" src="/img/profile.png">
           </div>
           <div class="card-body post-color rounded px-4">
             <h1 class="mb-2">About</h1>
