--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/konpa/devicon@master/devicon.min.css">
   <link href="css/resume.css" rel="stylesheet">
   <link rel="shortcut icon" href="img/code.ico" type="image/x-icon">
-  
+
 </head>
 
 <body id="page-top">
@@ -26,7 +26,9 @@
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
 
     <!-- Mobile Button -->
-    <button class="navbar-toggler order-first" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler order-first" type="button" data-toggle="collapse"
+      data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+      aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <!-- Profile picture -->
@@ -54,10 +56,10 @@
       </a>
       <a href="https://medium.com/@jovanidesouza">
         <i class="fab fa-medium"></i>
-      </a>  
+      </a>
       <a href="https://t.me/jovanidesouza">
         <i class="fab fa-telegram-plane"></i>
-      </a>     
+      </a>
     </div>
     <!-- primary left list -->
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -68,9 +70,11 @@
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#resume">Resume</a>
         </li>
+        <!--
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#portifolio">Portfolio</a>
         </li>
+        -->
       </ul>
     </div>
   </nav>
@@ -80,19 +84,22 @@
     <section class="resume-section p-lg-5 align-items-start" id="about">
       <div class="container">
         <div class="card border-0 shadow my-5">
-          <div class="profile-header  position-absolute" >
+          <div class="profile-header  position-absolute">
             <img class="profile-icon rounded-circle border-profile" src="/img/profile.png">
           </div>
           <div class="card-body post-color rounded px-4">
             <h1 class="mb-2">About</h1>
             <div class="bio">
-              <a>Inspired by the many excellent lorem ipsum generators, this simple webapp generates placeholder text. 
-                However, instead of generating plain text, this generator gives you structured text in the form of markdown. 
-                In order to do so, it uses Markov Chains and many heuristics. 
-                It was written in Haskell and the source code is available on GitHub. 
-                Crafted with a lot of love for the markdown format by Jasper Van der Jeugt. An HTTP API is also available!</a>
+              <a>My name is Jovani de Souza, i am passionate about technology, Software Development and Internet of
+                Things.
+
+                I have a BSc Degree in Computer Science at Federal University of Fronteira Sul <a href="https://www.uffs.edu.br/">(UFFS)</a>.
+
+                Currently working as a DevOps Analyst, with hands-on experience in the development life cycle of
+                applications used by hundreds of customers.
+              </a>
             </div>
-          </div>    
+          </div>
         </div>
       </div>
     </section>
@@ -107,7 +114,7 @@
             <div class="mb-3">
               <ul class="navbar-nav">
                 <li>
-                  <i class="fas fa-map-marker-alt"></i><a> Chapecó - Brazil</a>  
+                  <i class="fas fa-map-marker-alt"></i><a> Chapecó - Brazil</a>
                 </li>
                 <li>
                   <i class="fas fa-envelope"></i><a> jovanidesouza@hotmail.com</a>
@@ -160,15 +167,15 @@
                       <a>Bachelor of Computer Science</a>
                     </li>
                   </ul>
-                  
+
                 </li>
               </ul>
             </div>
-          </div>    
+          </div>
         </div>
       </div>
     </section>
-    <!-- portifolio -->
+    <!-- portifolio 
     <section class="resume-section p-3 p-lg-5 d-flex justify-content-start" id="portifolio">
       <div class="container">
         <h2 class="my-4">Portfolio</h2>
@@ -242,23 +249,24 @@
         </div>
       </div>
     </section>
-  </dvi>
+    -->
+    </dvi>
 
-  <!-- Bootstrap core JavaScript -->
-  <script src="vendor/jquery/jquery.min.js"></script>
-  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <!-- Bootstrap core JavaScript -->
+    <script src="vendor/jquery/jquery.min.js"></script>
+    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
-  <!-- Plugin JavaScript -->
-  <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
+    <!-- Plugin JavaScript -->
+    <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
 
-  <!-- Custom scripts for this template -->
-  <script src="js/resume.min.js"></script>
+    <!-- Custom scripts for this template -->
+    <script src="js/resume.min.js"></script>
 
 </body>
 
 <footer>
   <div class="container social-icons text-center">
-    
+
   </div>
 </footer>
 
