--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
           <div class="card-body post-color rounded px-4">
             <h1 class="mb-2">About</h1>
             <div class="bio">
-              <a>My name is Jovani de Souza, i am passionate about technology, Software Development and Internet of
+              <a>My name is Jovani de Souza, I am passionate about technology, Software Development and Internet of
                 Things.
 
                 I have a BSc Degree in Computer Science at Federal University of Fronteira Sul <a href="https://www.uffs.edu.br/">(UFFS)</a>.
