--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                 I have a BSc Degree in Computer Science at Federal University of Fronteira Sul <a href="https://www.uffs.edu.br/">(UFFS)</a>.
 
                 Currently working as a DevOps Analyst, with hands-on experience in the development life cycle of
-                applications used by hundreds of customers.
+                applications used by thousands of customers.
               </a>
             </div>
           </div>
